<resources>
    <string name="app_name">Your Tracker</string>

    <string name="lbl_welcome">Welcome</string>
    <string name="inc">Incident</string>
    <string name="lbl_login">Login</string>
    <string name="lbl_select_site">Select Site</string>
    <string name="lbl_start">Start</string>
    <string name="lbl_stop">Stop</string>
    <string name="lbl_logout">Do you really wants to logout ?</string>

    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="GPSAlertDialogMessage">Enable GPS location</string>
    <string name="GPSAlertDialogTitle">Location Required !</string>

    <string name="lbl_wait">Please wait...</string>
    <string name="lbl_error_network">Internet connection not available</string>
    <string name="lbl_login_failed">Failed to login, please try again</string>


    <!-- Validation Error -->
    <string name="error_email">Enter email id</string>
    <string name="error_valid_email">Enter valid email id</string>
    <string name="error_site">Select valid site from dropdown</string>
</resources>
