<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinatorLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg"
    android:focusableInTouchMode="true"
    tools:context="com.app.tracker.Login">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_marginTop="50dp"
            android:id="@+id/img"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:contentDescription="@string/app_name"
            android:scaleType="fitXY"
            android:src="@drawable/location_icon" />

        <com.app.widget.MyFontTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/img"
            android:layout_centerInParent="true"
            android:padding="@dimen/margin_5"
            android:text="@string/app_name"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_large"
            android:textStyle="bold" />

        <com.app.widget.MyFontTextView
            android:id="@+id/welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/title"
            android:layout_centerInParent="true"
            android:padding="@dimen/margin_5"
            android:text="@string/lbl_welcome"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_medium_25"
            android:textStyle="normal" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcome"
            android:orientation="vertical"
            android:layout_margin="@dimen/text_size_large">

            <EditText
                android:layout_marginTop="30dp"
                android:id="@+id/edt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#00000000"
                android:drawableLeft="@android:drawable/ic_lock_idle_lock"
                android:hint="Username"
                android:singleLine="true"
                android:maxLength="20"
                android:drawablePadding="@dimen/margin_2"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/white" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_below="@+id/edt_login"
                android:background="@android:color/white" />

            <Button
                android:layout_marginTop="30dp"
                android:onClick="myFancyMethod"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/margin_10"
                android:theme="@style/MyButton"
                android:text="@string/lbl_login"
                android:textColor="#FFF" />


            <ProgressBar
                android:visibility="gone"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:id="@+id/loader"/>

        </LinearLayout>

    </RelativeLayout>
    </ScrollView>

</RelativeLayout>
    </android.support.design.widget.CoordinatorLayout>
